Add: combine page

--- a/pages/menu.html
+++ b/pages/menu.html
@@ -10,6 +10,9 @@
           <a class="nav-link" href="/pages/planner.html">Planner</a>
         </li>
         <li class="nav-item">
+          <a class="nav-link" href="/pages/combine-pdf.html">Combine</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link" href="/pages/all-courses.html">Courses</a>
         </li>
         <li class="nav-item">
