--- a/pages/all-presenters.html
+++ b/pages/all-presenters.html
@@ -18,7 +18,7 @@
   </div>
 
   <script>
-    fetch('../database/presenters.json')
+    fetch('/presenters')
       .then(response => response.json())
       .then(data => {
         const presenterList = document.getElementById('presenterList');
@@ -46,27 +46,27 @@
       }
 
       function deletePresenter(index) {
-      fetch('../database/presenters.json')
-        .then(response => response.json())
-        .then(data => {
-          data.splice(index, 1); // Remove the title from the array
-          return fetch('http://localhost:3000/update-presenters', { // Endpoint to update presenters.json
-            method: 'POST',
-            headers: {
-              'Content-Type': 'application/json',
-            },
-            body: JSON.stringify(data),
-          });
-        })
-        .then(response => {
-          if (!response.ok) {
-            throw new Error('Network response was not ok');
-          }
-          // Reload the page or update the UI to reflect changes
-          window.location.reload();
-        })
-        .catch(error => console.error('Error:', error));
-    }  
+        fetch('/presenters')
+          .then(response => response.json())
+          .then(data => {
+            data.splice(index, 1); // Remove the presenter from the array
+            return fetch('/delete-presenter', { // Endpoint to delete presenter
+              method: 'POST',
+              headers: {
+                'Content-Type': 'application/json',
+              },
+              body: JSON.stringify({ index }),
+            });
+          })
+          .then(response => {
+            if (!response.ok) {
+              throw new Error('Network response was not ok');
+            }
+            // Reload the page or update the UI to reflect changes
+            window.location.reload();
+          })
+          .catch(error => console.error('Error:', error));
+      }
   </script>
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
